fix: correct alignment property in About Us image box styles

--- a/src/module/home/_home.scss
+++ b/src/module/home/_home.scss
@@ -657,7 +657,7 @@
 .about-us-image-box-moon {
     display: flex;
     flex-wrap: wrap;
-    align-items: end;
+    align-items: flex-end;
     margin-right: 15px;
 }
 
